Put skulpt.js files local

--- a/layouts/python/baseof.html
+++ b/layouts/python/baseof.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Site.Language.Lang }}" class="no-js">
   <head>
     {{ partial "head.html" . }}
-    {{ partial "python.html" . }}
+    {{ partial "skulpt.html" . }}
   </head>
   <body class="td-{{ .Kind }}">
     <header>
