--- a/layouts/shortcodes/ide.html
+++ b/layouts/shortcodes/ide.html
@@ -1,51 +1,47 @@
-<script type="text/javascript"> 
+<!-- The Monaco Editor -->
+<div id="container" style="width:600px;height:400px;border:1px solid #ccc"></div>
+<script src="/app.js"></script>
 
-    // output functions are configurable.  This one just appends some text
-    // to a pre element.
-    function outf(text) { 
-        var mypre = document.getElementById("output"); 
-        mypre.innerHTML = mypre.innerHTML + text; 
-    } 
-    
+<script type="text/javascript">
+
+    function outf(text) {
+        var mypre = document.getElementById("output");
+        mypre.innerHTML = mypre.innerHTML + text;
+    }
+
     function builtinRead(x) {
         if (Sk.builtinFiles === undefined || Sk.builtinFiles["files"][x] === undefined)
-                throw "File not found: '" + x + "'";
+            throw "File not found: '" + x + "'";
         return Sk.builtinFiles["files"][x];
     }
-    
-    // Here's everything you need to run a python program in skulpt
-    // grab the code from your textarea
-    // get a reference to your pre element for output
-    // configure the output function
-    // call Sk.importMainWithBody()
-    function runit() { 
-       var prog = document.getElementById("yourcode").value; 
-       var mypre = document.getElementById("output"); 
-       mypre.innerHTML = ''; 
-       Sk.pre = "output";
-       Sk.configure({output:outf, read:builtinRead}); 
-       (Sk.TurtleGraphics || (Sk.TurtleGraphics = {})).target = 'mycanvas';
-       var myPromise = Sk.misceval.asyncToPromise(function() {
-           return Sk.importMainWithBody("<stdin>", false, prog, true);
-       });
-       myPromise.then(function(mod) {
-           console.log('success');
-       },
-           function(err) {
-           console.log(err.toString());
-       });
-    } 
-</script> 
 
-<form> 
-<textarea id="yourcode" cols="88" rows="10">
-{{ .Inner }}
-</textarea><br /> 
-<button type="button" onclick="runit()">Run</button> 
-</form> 
+    function runit() {
+        var prog = window.editor.getValue();
+        var mypre = document.getElementById("output");
+        mypre.innerHTML = '';
+        Sk.pre = "output";
+        Sk.configure({ output: outf, read: builtinRead });
+        (Sk.TurtleGraphics || (Sk.TurtleGraphics = {})).target = 'mycanvas';
+        var myPromise = Sk.misceval.asyncToPromise(function () {
+            return Sk.importMainWithBody("<stdin>", false, prog, true);
+        });
+        myPromise.then(function (mod) {
+            console.log('success');
+        },
+            function (err) {
+                alert(err.toString())
+            });
+    }
+
+    window.editor.setModelLanguage(window.editor.getModel(), "python")
+</script>
+
+<form>
+    <button type="button" onclick="runit()">Run</button>
+</form>
+
+
 
 <h2>Your Program's Output</h3>
-<pre id="output" ></pre> 
-<div id="mycanvas"></div> 
-
-    
+    <pre id="output"></pre>
+    <div id="mycanvas"></div>
