--- a/layouts/shortcodes/ide.html
+++ b/layouts/shortcodes/ide.html
@@ -20,7 +20,11 @@
         var mypre = document.getElementById("output");
         mypre.innerHTML = '';
         Sk.pre = "output";
-        Sk.configure({ output: outf, read: builtinRead });
+        Sk.configure({
+            output: outf,
+            read: builtinRead,
+            __future__: Sk.python3
+        });
         (Sk.TurtleGraphics || (Sk.TurtleGraphics = {})).target = 'mycanvas';
         var myPromise = Sk.misceval.asyncToPromise(function () {
             return Sk.importMainWithBody("<stdin>", false, prog, true);
@@ -35,7 +39,11 @@
 
     window.editor = monaco.editor.create(document.getElementById('container'), {
         value: '{{ .Inner }}',
-        language: 'python'
+        language: 'python',
+        theme: "vs-dark",
+        minimap: {
+            enabled: false
+        }
     });
 
 </script>
