--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -12,11 +12,8 @@
   <div class="container-fluid td-outer">
     <div class="td-main">
       <div class="row flex-xl-nowrap">
-        <div class="col-12 col-md-3 col-xl-2 td-sidebar d-print-none">
+        <div class="col-12 col-md-auto col-xl-auto td-sidebar d-print-none">
           {{ partial "sidebar.html" . }}
-        </div>
-        <div class="d-none d-xl-block col-xl-2 td-toc d-print-none">
-          {{ partial "toc.html" . }}
         </div>
         <main class="col-12 col-md-9 col-xl-8 pl-md-5" role="main">
           {{ partial "version-banner.html" . }}
