--- a/layouts/partials/footer-nav.html
+++ b/layouts/partials/footer-nav.html
@@ -1,36 +1,17 @@
-{{ $parent := .Page }}
-
-{{ $up_label := "up_link" }}
-{{ if $parent.Params.up_label }}
-{{ $up_label = $parent.Params.up_label }}
-{{ end }}
-
-{{ $prev_label := "prev_link" }}
-{{ if $parent.Params.prev_label }}
-{{ $prev_label = $parent.Params.prev_label }}
-{{ end }}
-
-{{ $next_label := "next_link" }}
-{{ if $parent.Params.next_label }}
-{{ $next_label = $parent.Params.next_label }}
-{{ end }}
-
 <ul class="list-unstyled d-flex justify-content-between align-items-center mb-0 pt-5">
     <li>
-        {{ if $parent.Params.prev_link }}
-        <a href="{{ $parent.Params.prev_link }}" class="btn btn-primary "><span class="ml-1">←</span>
-            {{$prev_label }}</a>
+        {{ with  .Params.nav.prev }}
+        <a href="{{.url}}" class="btn btn-primary ">&larr; {{.label}}<span class="ml-1"></span></a>
         {{ end }}
     </li>
     <li>
-        {{ if $parent.Params.next_link }}
-        <a href="{{ $parent.Params.next_link }}" class="btn btn-primary ">{{$next_label }} <span
-                class="ml-1">→</span></a>
+        {{ with  .Params.nav.up }}
+        <a href="{{.url}}" class="btn btn-primary ">{{.label}}<span class="ml-1">&uarr;</span></a>
         {{ end }}
-
-        {{ if $parent.Params.up_link }}
-        <a href="{{ $parent.Params.up_link }}" class="btn btn-primary ">{{$up_label }} <span class="ml-1">↑</span></a>
+    </li>
+    <li>
+        {{ with  .Params.nav.next }}
+        <a href="{{.url}}" class="btn btn-primary ">{{.label}}<span class="ml-1">&rarr;</span></a>
         {{ end }}
-
     </li>
 </ul>
