Move button, use more feature blocks

--- a/layouts/community/list.html
+++ b/layouts/community/list.html
@@ -6,6 +6,11 @@
 		<span class="h4 mb-0">
 			<h1>Welcome to {{ .Site.Title }}</h1>
 		</span>
+		<span class="h4 mb-4">
+			<a class="btn btn-lg btn-secondary mt-5 mb-0" href="/about">
+				Learn More <i class=" fas fa-arrow-alt-circle-right ml-2"></i>
+			</a>
+		</span>
 	</div>
 </section>
 
