Madding around headings

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -5,6 +5,10 @@
                 font-size: 1.30rem;
                 font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
         }
+        h2 {
+                margin-top: 50px;
+                margin-bottom: 20px;
+        }
         img {
                 height: auto;
         }
