--- a/assets/scss/_main-container.scss
+++ b/assets/scss/_main-container.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 1024px;
+    max-width: 1024px;
 }
 
 // The outer page container for the default base template.
